Fix css issue on mobile

--- a/src/main/webapp/assets/sass/z-responsive.sass
+++ b/src/main/webapp/assets/sass/z-responsive.sass
@@ -134,7 +134,7 @@
         font-size: 45px
   .bubble-chart-container
     width: 80%
-    min-height: 380px
+    min-height: 280px
     max-width: 320px
   .pie-Chart-Container
     padding-top: 0
